# Ray_Tracer_Challenge

./: .gitignore  CMakeLists.txt  build.sh
dependencies/: CMakeLists.txt
src/: Tests.cpp  Tuple.h
tests/: TupleTest.cpp
